traefik-setups/traefik-site-example/10-nginx-services.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: nginx
